gnome-shell (3.21.92-1) UNRELEASED; urgency=medium

  [ Andreas Henriksson ]
  * Bump gnome-tweak-tool Breaks to << 3.20.1-2~ for the
    org.gnome.shell.calendar -> org.gnome.desktop.calendar schema key move.
  * Move gnome-tweak-tool and gnome-calendar Breaks to gnome-shell-common
    which is the package containing the schemas.

  [ Michael Biebl ]
  * New upstream development release.

 -- Andreas Henriksson <andreas@fatal.se>  Thu, 01 Sep 2016 20:59:18 +0200

gnome-shell (3.21.91-2) unstable; urgency=medium

  * Add Breaks against gnome-calendar (<< 3.21.4) to ensure we have a recent
    enough version which no longer uses the org.gnome.shell.calendar GSettings
    schema. It was removed from gnome-shell in favour of the
    org.gnome.desktop.calendar schema provided by gsettings-desktop-schemas.

 -- Michael Biebl <biebl@debian.org>  Thu, 01 Sep 2016 02:27:10 +0200

gnome-shell (3.21.91-1) unstable; urgency=low

  * New upstream beta release.

 -- Andreas Henriksson <andreas@fatal.se>  Tue, 30 Aug 2016 19:41:00 +0200

gnome-shell (3.21.90.1-1) experimental; urgency=medium

  * New upstream beta release.

 -- Andreas Henriksson <andreas@fatal.se>  Sun, 21 Aug 2016 05:36:58 +0200

gnome-shell (3.21.90-1) experimental; urgency=medium

  * New upstream beta release.
  * Update build-dependencies according to configure.ac changes:
    - drop intltool (>= 0.26)
    - bump *mutter* to >= 3.21.90
  * Drop d/p/git_calendar-server_add_back_missing_return_value.patch
    - now included in upstream release.

 -- Andreas Henriksson <andreas@fatal.se>  Sat, 20 Aug 2016 17:47:56 +0200

gnome-shell (3.21.4-1) experimental; urgency=medium

  * New upstream release.
  * Update build-dependencies according to configure.ac changes:
    - bump gobject-introspection to >= 1.49.1
    - bump *mutter* to >= 3.21.4
    - drop libclutter-1.0-dev (>= 1.22), clutter fork now shipped in mutter.
    - drop gir1.2-clutter-1.0 (>= 1.22), forked typelib now in gir1.2-mutter.